InfoActivity - sensor readings.... in progress 03

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="v1.02"
-            android:id="@+id/textView2"
+            android:id="@+id/tvVersionName"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:textColor="#222" />
