--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -14,12 +14,26 @@
         android:layout_height="wrap_content"
         android:layout_weight="1">
 
-        <TextView
-            android:text="Response"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView7"
-            android:textStyle="normal|bold" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="Response"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView7"
+                android:textStyle="normal|bold"
+                android:layout_weight="1" />
+
+            <ProgressBar
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="50dp"
+                android:id="@+id/pbInProgress"
+                android:layout_weight="1"
+                android:layout_height="25dp" />
+        </LinearLayout>
 
         <TextView
             android:text="TextView"
