--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -17,21 +17,35 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical">
 
             <TextView
                 android:text="Response"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView7"
-                android:textStyle="normal|bold"
+                android:textStyle="normal|bold" />
+
+            <TextView
+                android:text="0.122s"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/tvResponseTime"
+                android:textSize="10sp"
+                android:gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:textColor="@color/colorAccent" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1" />
 
             <ProgressBar
                 style="?android:attr/progressBarStyleSmall"
                 android:layout_width="50dp"
                 android:id="@+id/pbInProgress"
-                android:layout_weight="1"
                 android:layout_height="25dp" />
         </LinearLayout>
 
@@ -39,7 +53,7 @@
             android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tvResponse"
+            android:id="@+id/tvResponseValue"
             android:textSize="12sp"
             android:layout_marginTop="10dp" />
 
@@ -66,6 +80,14 @@
             android:layout_height="wrap_content"
             android:id="@+id/btnHCSR"
             android:textAllCaps="false" />
+
+        <Button
+            android:text="Read analog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnReadAnalog"
+            android:textAllCaps="false"
+            android:layout_marginTop="7dp" />
 
     </LinearLayout>
 </LinearLayout>
