--- a/app/src/main/res/layout/activity_manual_drive.xml
+++ b/app/src/main/res/layout/activity_manual_drive.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,14 +21,43 @@
             android:layout_height="match_parent"
             android:layout_weight="1">
 
-            <Button
-                android:id="@+id/btnHome_cm"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:drawableTop="@drawable/ic_home"
-                android:drawablePadding="10dp"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/btnHome_cm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:drawableTop="@drawable/ic_home"
+                    android:drawablePadding="10dp" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <Switch
+                    android:text="RUN"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/switchRun"
+                    android:gravity="center"
+                    android:hint="6464"
+                    android:visibility="visible" />
+
+            </LinearLayout>
+
+
+
 
         </LinearLayout>
+
 
         <RelativeLayout
             android:id="@+id/llTouchPad"
