--- a/app/src/main/res/layout/activity_socket_test.xml
+++ b/app/src/main/res/layout/activity_socket_test.xml
@@ -37,6 +37,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="SEND" />
+
+        <TextView
+            android:id="@+id/tv_log"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="LOG"/>
     </LinearLayout>
 
     <LinearLayout
