--- a/app/src/main/res/layout/activity_socket_test.xml
+++ b/app/src/main/res/layout/activity_socket_test.xml
@@ -4,7 +4,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context="hr.duby.rcmower.activities.SocketTestActivity">
+    tools:context="hr.duby.rcmower.activities.TestLogActivity">
 
     <TextView
         android:id="@+id/id_tv"
