TestLogActivity.... in progress

--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -43,7 +43,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
+                android:inputType="phone"
                 android:ems="10"
                 android:id="@+id/etIPAdress_setup"
                 android:imeOptions="actionNext"
