--- a/app/src/main/res/layout/activity_test_log.xml
+++ b/app/src/main/res/layout/activity_test_log.xml
@@ -77,7 +77,9 @@
         <Button
             android:id="@+id/btnSendMsg_sta"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:text="SEND" />
 
