--- a/app/src/main/res/layout/activity_smart_drive.xml
+++ b/app/src/main/res/layout/activity_smart_drive.xml
@@ -5,7 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     tools:context=".activities.SmartDriveActivity"
-    android:padding="16dp"
+    android:paddingBottom="5dp"
+    android:paddingTop="12dp"
+    android:paddingRight="12dp"
+    android:paddingLeft="12dp"
     android:background="#eee">
 
     <LinearLayout
@@ -14,7 +17,7 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/btnLeft_sda"
+            android:id="@+id/btnTurnLeft_sda"
             android:layout_width="70dp"
             android:layout_height="match_parent"
             android:layout_marginTop="25dp"
@@ -71,7 +74,7 @@
             android:gravity="center">
 
             <Button
-                android:id="@+id/button5"
+                android:id="@+id/btnRotateLeft_sda"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:drawableTop="@drawable/ic_turn_left"
@@ -97,7 +100,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/button6"
+                android:id="@+id/btnRotateRight_sda"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:drawableTop="@drawable/ic_turn_right"/>
@@ -116,6 +119,22 @@
                 android:drawableTop="@drawable/ic_stop"
                 android:drawablePadding="-20dp"/>
         </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="bottom">
+
+            <TextView
+                android:id="@+id/tvStatus_sda"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="status information"
+                android:gravity="center"
+                android:textSize="12sp"/>
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -123,7 +142,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
         <Button
-            android:id="@+id/btnRight_sda"
+            android:id="@+id/btnTurnRight_sda"
             android:layout_width="70dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="25dp"
